--- a/Clean_Air_Data/Code/clean_air.ipynb
+++ b/Clean_Air_Data/Code/clean_air.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Date</th>\n",
        "      <th>Country</th>\n",
        "      <th>City</th>\n",
@@ -51,98 +52,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>53.37</td>\n",
+       "      <td>37841</td>\n",
+       "      <td>2019-10-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>1521.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2020-01-27</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>7.39</td>\n",
+       "      <td>37842</td>\n",
+       "      <td>2019-10-19</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>72</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1729.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2020-02-06</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>50.14</td>\n",
+       "      <td>37843</td>\n",
+       "      <td>2019-11-05</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>70</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>856.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2020-03-15</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>19.81</td>\n",
+       "      <td>37844</td>\n",
+       "      <td>2019-11-07</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1090.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>wind speed</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>15.16</td>\n",
+       "      <td>37845</td>\n",
+       "      <td>2019-12-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1095.94</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date Country         City      Specie  count  min  max  median  \\\n",
-       "0  2020-01-07      ET  Addis Ababa  wind speed     23  1.0  8.7     4.6   \n",
-       "1  2020-01-27      ET  Addis Ababa  wind speed     11  2.0  5.1     3.0   \n",
-       "2  2020-02-06      ET  Addis Ababa  wind speed     15  1.0  8.2     5.0   \n",
-       "3  2020-03-15      ET  Addis Ababa  wind speed     13  1.0  6.1     3.0   \n",
-       "4  2020-01-06      ET  Addis Ababa  wind speed     17  2.5  7.2     4.6   \n",
+       "   Unnamed: 0        Date Country     City Specie  count   min   max  median  \\\n",
+       "0       37841  2019-10-02      US  Raleigh   pm25     71   5.0  80.0    57.0   \n",
+       "1       37842  2019-10-19      US  Raleigh   pm25     72  13.0  63.0    38.0   \n",
+       "2       37843  2019-11-05      US  Raleigh   pm25     70  17.0  55.0    38.0   \n",
+       "3       37844  2019-11-07      US  Raleigh   pm25     68   9.0  63.0    42.0   \n",
+       "4       37845  2019-12-02      US  Raleigh   pm25     62   5.0  42.0    13.0   \n",
        "\n",
        "   variance  \n",
-       "0     53.37  \n",
-       "1      7.39  \n",
-       "2     50.14  \n",
-       "3     19.81  \n",
-       "4     15.16  "
+       "0   1521.78  \n",
+       "1   1729.17  \n",
+       "2    856.36  \n",
+       "3   1090.18  \n",
+       "4   1095.94  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#get air quality data\n",
-    "air=pd.read_csv('../Resources/waqi-covid19-airqualitydata-2020.csv')\n",
+    "air=pd.read_csv('../Resources/airdata.csv')\n",
     "air.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +172,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Date</th>\n",
        "      <th>Country</th>\n",
        "      <th>City</th>\n",
@@ -179,86 +186,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>215</td>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37841</td>\n",
+       "      <td>2019-10-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>9071.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>216</td>\n",
-       "      <td>2020-04-02</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>80.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>869.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>217</td>\n",
-       "      <td>2020-02-19</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
-       "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>139.0</td>\n",
        "      <td>57.0</td>\n",
-       "      <td>6169.84</td>\n",
+       "      <td>1521.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>218</td>\n",
-       "      <td>2020-01-28</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37842</td>\n",
+       "      <td>2019-10-19</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>3661.67</td>\n",
+       "      <td>72</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1729.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>219</td>\n",
-       "      <td>2020-02-04</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37843</td>\n",
+       "      <td>2019-11-05</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
+       "      <td>70</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>55.0</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>3896.45</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>856.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>37844</td>\n",
+       "      <td>2019-11-07</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1090.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>37845</td>\n",
+       "      <td>2019-12-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1095.94</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date Country         City Specie  count   min    max  median  \\\n",
-       "215  2020-01-26      ET  Addis Ababa   pm25     24  50.0  156.0    76.0   \n",
-       "216  2020-04-02      ET  Addis Ababa   pm25     24  38.0   80.0    61.0   \n",
-       "217  2020-02-19      ET  Addis Ababa   pm25     24  30.0  139.0    57.0   \n",
-       "218  2020-01-28      ET  Addis Ababa   pm25     24  25.0  102.0    57.0   \n",
-       "219  2020-02-04      ET  Addis Ababa   pm25     24  55.0  142.0    68.0   \n",
+       "   Unnamed: 0        Date Country     City Specie  count   min   max  median  \\\n",
+       "0       37841  2019-10-02      US  Raleigh   pm25     71   5.0  80.0    57.0   \n",
+       "1       37842  2019-10-19      US  Raleigh   pm25     72  13.0  63.0    38.0   \n",
+       "2       37843  2019-11-05      US  Raleigh   pm25     70  17.0  55.0    38.0   \n",
+       "3       37844  2019-11-07      US  Raleigh   pm25     68   9.0  63.0    42.0   \n",
+       "4       37845  2019-12-02      US  Raleigh   pm25     62   5.0  42.0    13.0   \n",
        "\n",
-       "     variance  \n",
-       "215   9071.23  \n",
-       "216    869.55  \n",
-       "217   6169.84  \n",
-       "218   3661.67  \n",
-       "219   3896.45  "
+       "   variance  \n",
+       "0   1521.78  \n",
+       "1   1729.17  \n",
+       "2    856.36  \n",
+       "3   1090.18  \n",
+       "4   1095.94  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +372,7 @@
        "4  RÃ¢mnicu VÃ¢lcea      RO  107558  45.10000  24.36667"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -404,6 +416,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Date</th>\n",
        "      <th>Country</th>\n",
        "      <th>City</th>\n",
@@ -421,100 +434,105 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>37841</td>\n",
+       "      <td>2019-10-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>9071.23</td>\n",
-       "      <td>2757729</td>\n",
-       "      <td>9.02497</td>\n",
-       "      <td>38.74689</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>1521.78</td>\n",
+       "      <td>451066</td>\n",
+       "      <td>35.7721</td>\n",
+       "      <td>-78.63861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2020-04-02</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>37842</td>\n",
+       "      <td>2019-10-19</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
+       "      <td>72</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>63.0</td>\n",
        "      <td>38.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>869.55</td>\n",
-       "      <td>2757729</td>\n",
-       "      <td>9.02497</td>\n",
-       "      <td>38.74689</td>\n",
+       "      <td>1729.17</td>\n",
+       "      <td>451066</td>\n",
+       "      <td>35.7721</td>\n",
+       "      <td>-78.63861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2020-02-19</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>37843</td>\n",
+       "      <td>2019-11-05</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>6169.84</td>\n",
-       "      <td>2757729</td>\n",
-       "      <td>9.02497</td>\n",
-       "      <td>38.74689</td>\n",
+       "      <td>70</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>856.36</td>\n",
+       "      <td>451066</td>\n",
+       "      <td>35.7721</td>\n",
+       "      <td>-78.63861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2020-01-28</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>37844</td>\n",
+       "      <td>2019-11-07</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>3661.67</td>\n",
-       "      <td>2757729</td>\n",
-       "      <td>9.02497</td>\n",
-       "      <td>38.74689</td>\n",
+       "      <td>68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1090.18</td>\n",
+       "      <td>451066</td>\n",
+       "      <td>35.7721</td>\n",
+       "      <td>-78.63861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2020-02-04</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Addis Ababa</td>\n",
+       "      <td>37845</td>\n",
+       "      <td>2019-12-02</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>pm25</td>\n",
-       "      <td>24</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>3896.45</td>\n",
-       "      <td>2757729</td>\n",
-       "      <td>9.02497</td>\n",
-       "      <td>38.74689</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1095.94</td>\n",
+       "      <td>451066</td>\n",
+       "      <td>35.7721</td>\n",
+       "      <td>-78.63861</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date Country         City Specie  count   min    max  median  \\\n",
-       "0  2020-01-26      ET  Addis Ababa   pm25     24  50.0  156.0    76.0   \n",
-       "1  2020-04-02      ET  Addis Ababa   pm25     24  38.0   80.0    61.0   \n",
-       "2  2020-02-19      ET  Addis Ababa   pm25     24  30.0  139.0    57.0   \n",
-       "3  2020-01-28      ET  Addis Ababa   pm25     24  25.0  102.0    57.0   \n",
-       "4  2020-02-04      ET  Addis Ababa   pm25     24  55.0  142.0    68.0   \n",
+       "   Unnamed: 0        Date Country     City Specie  count   min   max  median  \\\n",
+       "0       37841  2019-10-02      US  Raleigh   pm25     71   5.0  80.0    57.0   \n",
+       "1       37842  2019-10-19      US  Raleigh   pm25     72  13.0  63.0    38.0   \n",
+       "2       37843  2019-11-05      US  Raleigh   pm25     70  17.0  55.0    38.0   \n",
+       "3       37844  2019-11-07      US  Raleigh   pm25     68   9.0  63.0    42.0   \n",
+       "4       37845  2019-12-02      US  Raleigh   pm25     62   5.0  42.0    13.0   \n",
        "\n",
-       "   variance      Pop      Lat      Long  \n",
-       "0   9071.23  2757729  9.02497  38.74689  \n",
-       "1    869.55  2757729  9.02497  38.74689  \n",
-       "2   6169.84  2757729  9.02497  38.74689  \n",
-       "3   3661.67  2757729  9.02497  38.74689  \n",
-       "4   3896.45  2757729  9.02497  38.74689  "
+       "   variance     Pop      Lat      Long  \n",
+       "0   1521.78  451066  35.7721 -78.63861  \n",
+       "1   1729.17  451066  35.7721 -78.63861  \n",
+       "2    856.36  451066  35.7721 -78.63861  \n",
+       "3   1090.18  451066  35.7721 -78.63861  \n",
+       "4   1095.94  451066  35.7721 -78.63861  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
