--- a/Clean_Air_Data/Code/air_filter_for_ml.ipynb
+++ b/Clean_Air_Data/Code/air_filter_for_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -122,7 +122,7 @@
        "4  2020-01-05      HU  Debrecen     o3     34   1.6  26.4    16.7    586.81"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4     15.16  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {
     "scrolled": false
    },
@@ -303,79 +303,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2019-11-02</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>2019-11-20</td>\n",
        "      <td>HU</td>\n",
-       "      <td>Debrecen</td>\n",
-       "      <td>o3</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>12.2</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>59.60</td>\n",
+       "      <td>Győr</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>2922.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2019-11-11</td>\n",
+       "      <td>1935</td>\n",
+       "      <td>2019-12-21</td>\n",
        "      <td>HU</td>\n",
-       "      <td>Debrecen</td>\n",
-       "      <td>o3</td>\n",
-       "      <td>66</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>15.2</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>151.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2019-11-12</td>\n",
-       "      <td>HU</td>\n",
-       "      <td>Debrecen</td>\n",
-       "      <td>o3</td>\n",
-       "      <td>65</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>193.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2019-12-22</td>\n",
-       "      <td>HU</td>\n",
-       "      <td>Debrecen</td>\n",
-       "      <td>o3</td>\n",
-       "      <td>45</td>\n",
-       "      <td>11.3</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>110.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2020-01-05</td>\n",
-       "      <td>HU</td>\n",
-       "      <td>Debrecen</td>\n",
-       "      <td>o3</td>\n",
+       "      <td>Győr</td>\n",
+       "      <td>pm25</td>\n",
        "      <td>34</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>26.4</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>586.81</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>1999.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1936</td>\n",
+       "      <td>2019-12-25</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>Győr</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>3025.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1937</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>Győr</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>16713.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1938</td>\n",
+       "      <td>2019-12-29</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>Győr</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2234.11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date Country      City Specie  count   min   max  median  variance\n",
-       "0  2019-11-02      HU  Debrecen     o3     72   1.9  12.2     7.0     59.60\n",
-       "1  2019-11-11      HU  Debrecen     o3     66   0.6  15.2     7.1    151.12\n",
-       "2  2019-11-12      HU  Debrecen     o3     65   2.3  18.9    12.0    193.29\n",
-       "3  2019-12-22      HU  Debrecen     o3     45  11.3  24.1    18.6    110.54\n",
-       "4  2020-01-05      HU  Debrecen     o3     34   1.6  26.4    16.7    586.81"
+       "            Date Country  City Specie  count   min    max  median  variance\n",
+       "1934  2019-11-20      HU  Győr   pm25     43   1.0  113.0    77.0   2922.14\n",
+       "1935  2019-12-21      HU  Győr   pm25     34  16.0   66.0    43.0   1999.51\n",
+       "1936  2019-12-25      HU  Győr   pm25     29   1.0   65.0    24.0   3025.52\n",
+       "1937  2020-01-04      HU  Győr   pm25     29   1.0  140.0   107.0  16713.30\n",
+       "1938  2019-12-29      HU  Győr   pm25     28   5.0   58.0    30.0   2234.11"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,37 +383,39 @@
    "source": [
     "#combine\n",
     "airdata=nineteen.append(twenty)\n",
+    "\n",
+    "#filter to just pm2.5\n",
+    "pm25=airdata['Specie']=='pm25'\n",
+    "airdata=airdata[pm25]\n",
+    "\n",
+    "\n",
     "airdata.to_csv(\"../Resources/includes2019.csv\")\n",
     "airdata.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "#filter by city\n",
-    "cities = [\"Santiago\", \"San Francisco\", \"Chicago\", \"Houston\", \"Wuhan\", \"Raleigh\", \"Beijing\", \"Dheli\", \"Mumbai\", \"London\", \"Florence\", \"Boston\", \"Hong Kong\", \"Milan\", \"Rome\"]\n",
+    "cities = [\"Santiago\", \"Wuhan\", \"Beijing\", \"Dheli\", \"Mumbai\", \"London\", \"Florence\", \"Hong Kong\", \"Milan\", \"Rome\"]\n",
     "airdata = airdata[airdata.City.isin(cities)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#filter to just pm2.5\n",
-    "pm25=airdata['Specie']=='pm25'\n",
-    "airdata=airdata[pm25]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
