--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -819,9 +819,265 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>DAILY_AQI_VALUE</th>\n",
+       "      <th>AQI_Base</th>\n",
+       "      <th>AQI_change</th>\n",
+       "      <th>RETAIL_REC</th>\n",
+       "      <th>GROCERY_PHARM</th>\n",
+       "      <th>PARKS</th>\n",
+       "      <th>TRANSIT_STATIONS</th>\n",
+       "      <th>WORK</th>\n",
+       "      <th>HOME</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STATE</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Alabama</th>\n",
+       "      <th>2/15/20</th>\n",
+       "      <td>32.840000</td>\n",
+       "      <td>32.840000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.600000</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>67.250000</td>\n",
+       "      <td>4.750000</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>-0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2/16/20</th>\n",
+       "      <td>42.640000</td>\n",
+       "      <td>32.840000</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>-0.600000</td>\n",
+       "      <td>-1.600000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-1.200000</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2/17/20</th>\n",
+       "      <td>33.480000</td>\n",
+       "      <td>32.840000</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>11.750000</td>\n",
+       "      <td>-3.000000</td>\n",
+       "      <td>-22.200000</td>\n",
+       "      <td>5.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2/18/20</th>\n",
+       "      <td>25.550000</td>\n",
+       "      <td>34.550000</td>\n",
+       "      <td>-9.000000</td>\n",
+       "      <td>-3.750000</td>\n",
+       "      <td>-3.750000</td>\n",
+       "      <td>-17.333333</td>\n",
+       "      <td>-5.000000</td>\n",
+       "      <td>-1.250000</td>\n",
+       "      <td>1.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2/19/20</th>\n",
+       "      <td>23.400000</td>\n",
+       "      <td>32.840000</td>\n",
+       "      <td>-9.440000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>2.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Wyoming</th>\n",
+       "      <th>4/5/20</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>-37.000000</td>\n",
+       "      <td>-13.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>-21.000000</td>\n",
+       "      <td>-28.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4/6/20</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>-30.666667</td>\n",
+       "      <td>-4.666667</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>-12.666667</td>\n",
+       "      <td>-34.666667</td>\n",
+       "      <td>13.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4/7/20</th>\n",
+       "      <td>9.666667</td>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>-31.000000</td>\n",
+       "      <td>-3.666667</td>\n",
+       "      <td>22.500000</td>\n",
+       "      <td>-11.666667</td>\n",
+       "      <td>-38.000000</td>\n",
+       "      <td>14.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4/8/20</th>\n",
+       "      <td>9.833333</td>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>-30.000000</td>\n",
+       "      <td>-2.666667</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>-11.000000</td>\n",
+       "      <td>-38.666667</td>\n",
+       "      <td>14.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4/9/20</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>5.666667</td>\n",
+       "      <td>-31.000000</td>\n",
+       "      <td>-1.666667</td>\n",
+       "      <td>43.500000</td>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>-38.666667</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2790 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DAILY_AQI_VALUE   AQI_Base  AQI_change  RETAIL_REC  \\\n",
+       "STATE   date                                                          \n",
+       "Alabama 2/15/20        32.840000  32.840000    0.000000    5.600000   \n",
+       "        2/16/20        42.640000  32.840000    9.800000   -0.600000   \n",
+       "        2/17/20        33.480000  32.840000    0.640000    3.400000   \n",
+       "        2/18/20        25.550000  34.550000   -9.000000   -3.750000   \n",
+       "        2/19/20        23.400000  32.840000   -9.440000    2.800000   \n",
+       "...                          ...        ...         ...         ...   \n",
+       "Wyoming 4/5/20         11.000000   7.000000    4.000000  -37.000000   \n",
+       "        4/6/20         11.000000   6.333333    4.666667  -30.666667   \n",
+       "        4/7/20          9.666667   6.333333    3.333333  -31.000000   \n",
+       "        4/8/20          9.833333   6.333333    3.500000  -30.000000   \n",
+       "        4/9/20         12.000000   6.333333    5.666667  -31.000000   \n",
+       "\n",
+       "                 GROCERY_PHARM      PARKS  TRANSIT_STATIONS       WORK  \\\n",
+       "STATE   date                                                             \n",
+       "Alabama 2/15/20       2.400000  67.250000          4.750000   1.800000   \n",
+       "        2/16/20      -1.600000   2.000000         -8.000000  -1.200000   \n",
+       "        2/17/20       0.200000  11.750000         -3.000000 -22.200000   \n",
+       "        2/18/20      -3.750000 -17.333333         -5.000000  -1.250000   \n",
+       "        2/19/20       2.200000   0.000000          1.500000   1.000000   \n",
+       "...                        ...        ...               ...        ...   \n",
+       "Wyoming 4/5/20      -13.000000  65.000000        -21.000000 -28.000000   \n",
+       "        4/6/20       -4.666667  54.000000        -12.666667 -34.666667   \n",
+       "        4/7/20       -3.666667  22.500000        -11.666667 -38.000000   \n",
+       "        4/8/20       -2.666667  52.000000        -11.000000 -38.666667   \n",
+       "        4/9/20       -1.666667  43.500000        -10.000000 -38.666667   \n",
+       "\n",
+       "                      HOME  \n",
+       "STATE   date                \n",
+       "Alabama 2/15/20  -0.600000  \n",
+       "        2/16/20   0.200000  \n",
+       "        2/17/20   5.400000  \n",
+       "        2/18/20   1.750000  \n",
+       "        2/19/20   0.200000  \n",
+       "...                    ...  \n",
+       "Wyoming 4/5/20    8.000000  \n",
+       "        4/6/20   13.333333  \n",
+       "        4/7/20   14.333333  \n",
+       "        4/8/20   14.333333  \n",
+       "        4/9/20   14.000000  \n",
+       "\n",
+       "[2790 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_movement.groupby(['STATE','date']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "air_movement.to_csv(\"data/air_movement_changes.csv\"); "
+    "air_movement.to_csv(\"data/grouped_by_state.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_movement.to_csv(\"grouped_by_state.csv\")"
    ]
   },
   {
